<resources>
    <string name="app_name">Reviewer</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="main_activity">Main Activity</string>
    <string name="start_new_activity">START NEW ACTIVITY</string>
    <string name="open_google">OPEN GOOGLE</string>
    <string name="second_activity">Second Activity</string>
    <string name="todo">TODO</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="tags">#fency #tasty #nice #bff</string>
    <string name="name_content">Some random name</string>
    <string name="name_value">Name:</string>
    <string name="street_value">Street:</string>
    <string name="street_content">Some random street</string>
    <string name="rating_value">Rating:</string>
    <string name="tags_value">Tags:</string>
    <string name="relativelayout">Relative Layout</string>
    <string name="linearlayout">Linear Layout</string>
    <string name="moje_dugme">Moje dugme</string>
    <string name="novi_string">Moje dugme 2</string>
    <string name="rating">Rating</string>
</resources>